--- a/app/javascript/stylesheets/groups.scss
+++ b/app/javascript/stylesheets/groups.scss
@@ -1,6 +1,7 @@
 // FIle dedicated to the styling exclusive to slick 
 @import "slick-generics.scss";
 
+// Side menu options
 .groups-container { 
   height: 100vh;
   width: 100%;
@@ -37,6 +38,50 @@
         margin-top: 1.5em;
       }
     }
+  }
+
+}
+
+.group-content-container { 
+  display: flex;
+  width: 100%;
+
+  .group-side-menu {
+    width: 20em;
+    height: 100vh; 
+    background-color: $slick-dark-purple;
+    color: white;
+    margin: 0;
+    padding: 0;
+   
+    header { 
+      font-size: 1em;
+      text-align: center;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+      width: fit-content;
+      margin: 10px auto;
+
+      li { 
+        margin:auto;
+      } 
+
+      a.text-channel-button{
+        font-size: 0.8em;
+      }
+    } 
+    
+  }
+
+  .group-menu-selection-content{
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #c9c9c9;
   }
 
 }
