--- a/app/javascript/stylesheets/groups.scss
+++ b/app/javascript/stylesheets/groups.scss
@@ -71,6 +71,8 @@
 
       a.text-channel-button{
         font-size: 0.8em;
+        margin-top: 0.3em;
+        margin-bottom: 0.3em;
       }
     } 
     
