Using friends list partial as default partial when logging into application

--- a/app/views/messaging/chats/index.html.erb
+++ b/app/views/messaging/chats/index.html.erb
@@ -32,4 +32,5 @@
   </section>
 </section>
 <section class="messaging-chat-content">
+  <%= render 'messaging/friends/partials/list', friends: @friends%>
 </section>
