--- a/app/views/messaging/text_channel/partials/_list.html.erb
+++ b/app/views/messaging/text_channel/partials/_list.html.erb
@@ -1,17 +1,22 @@
 <ul>
-  <% group.text_channels.each do |text_channel|  %>
-    <li>
-      <%= link_to messaging_text_channel_path(text_channel), remote: true, class: 'btn btn-sm btn-outline-light text-channel-button text-channel-option' do %>
-        <%= hidden_field_tag :text_channel_id, text_channel.id %>
-        # <%= text_channel.name %>
-      <% end %>
-    </li>
-  <% end %>
+  
+    <% group.text_channels.each do |text_channel|  %>
+      <li>
+        <div class="d-grid gap-2">
+          <%= link_to messaging_text_channel_path(text_channel), remote: true, class: 'btn btn-sm btn-outline-light text-channel-button text-channel-option' do %>
+            <%= hidden_field_tag :text_channel_id, text_channel.id %>
+            # <%= text_channel.name %>
+          <% end %>
+        </div>
+      </li>
+    <% end %>
   <% if group.user_adm.id = current_user.id %>
     <li>
-      <%= link_to new_messaging_text_channel_path(group_id: group.id), class: 'btn btn-sm btn-outline-light text-channel-button', remote: true do  %>
-        <i class="fas fa-plus"></i> Create new text channel
-      <% end %>
+      <div class="d-grid gap-2">
+        <%= link_to new_messaging_text_channel_path(group_id: group.id), class: 'btn btn-sm btn-outline-light text-channel-button', remote: true do  %>
+          <i class="fas fa-plus"></i> Create new text channel
+        <% end %>
+      </div>
     </li>
   <% end %>
 </ul>
