Creating group invite

--- a/app/views/messaging/user_invites/list_received.js.erb
+++ b/app/views/messaging/user_invites/list_received.js.erb
@@ -1,4 +1,4 @@
-<% invites_list = j render partial: 'messaging/user_invites/list_received', locals: { received_invites: received_invites } %>
+<% invites_list = j render partial: 'messaging/user_invites/list_received', locals: { received_invites: received_invites, group_invites: group_invites } %>
 (function (){
   let listing_dashboard = document.querySelector('.messaging-chat-content')
   if(listing_dashboard){
