--- a/app/views/messaging/user_invites/_list_received.html.erb
+++ b/app/views/messaging/user_invites/_list_received.html.erb
@@ -1,3 +1,4 @@
+<h1>User invites</h1>
 <table class="table table-hover">
   <thead class="table-primary">
     <tr>
@@ -26,6 +27,36 @@
       <tr>
         <td colspan="3"> You haven't received invites </td>
       </tr>
+    <% end %>
+  </tbody>
+</table>
+<h1>Group invites</h1>
+<table class="table table-hover">
+  <thead class="table-primary">
+    <tr>
+      <th> Group Name</th>
+      <th> Group description </th>
+      <th> Actions </th>
+    </tr>
+  </thead>
+  <tbody>  
+    <% if !group_invites.empty? %>
+      <% group_invites.each do |group_invite| %>
+        <tr>
+          <td><%= group_invite.group.name %></td>
+          <td><%= group_invite.group.description %></td>
+          <td> 
+            <%= link_to messaging_accept_group_invite_path(group_invite), remote: true, method: :put do %>
+              <i class="fas fa-check"></i>
+            <% end %>
+            <%= link_to messaging_decline_group_invite_path(group_invite), remote: true, method: :delete do %>
+              <i class="fas fa-times"></i>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    <% else %>
+      <td colspan="3"> You haven't received invites </td>
     <% end %>
   </tbody>
 </table>
