Restricting functions on groups to user adm only

--- a/app/views/messaging/groups/show.html.erb
+++ b/app/views/messaging/groups/show.html.erb
@@ -3,7 +3,7 @@
     <header>
       <h3>
         <%= @group.name %>
-        <% if @group.user_adm.id = @current_user.id %>
+        <% if @group.user_adm.id == @current_user.id %>
           <%= button_tag class: 'btn btn-sm btn-outline-light btn-toggle-group-actions', 
                          type: 'button' do %>
             <i class="fas fa-cog"></i>
