--- a/app/views/layouts/messaging_partials/_side_menu.html.erb
+++ b/app/views/layouts/messaging_partials/_side_menu.html.erb
@@ -22,22 +22,24 @@
         <i class="fas fa-users"> </i> Contacts
       <% end %>
     </section>
-    <% @user.all_user_groups.each do |group| %>
-      <section class="messaging-group">
-        <%= link_to messaging_groups_show_path(group.id) do %> 
-          <i class="fas fa-users"> </i> <%= group.name %>
-        <% end %>
-      </section>
-    <% end %>
+    <section class="group-options">
+      <% @user.all_user_groups.each do |group| %>
+        <section class="messaging-group">
+          <%= link_to messaging_groups_show_path(group.id) do %> 
+            <i class="fas fa-users"> </i> <%= group.name %>
+          <% end %>
+        </section>
+      <% end %>
+    </section>
     <section class="group-actions">
-      <!-- <div class="group-item" title="Search groups" data-toggle="tooltip"> -->
+
       <%= link_to  messaging_groups_available_groups_path , class: 'btn btn-sm btn-outline-light', 'data-toggle': 'tooltip' do %>
         <i class="fas fa-search"></i>
       <% end %>
-      <!-- <div class="group-item" title="Create group" data-toggle="tooltip"> -->
+
       <%= link_to messaging_groups_user_groups_path , class: 'btn btn-sm btn-outline-light', 'data-toggle': 'tooltip' do %>
         <i class="fas fa-plus"></i>
       <% end %>
-    </seciton>
+    </section>
   </section>
 </aside>
