--- a/app/views/messaging/groups/partials/_group_form_fields.html.erb
+++ b/app/views/messaging/groups/partials/_group_form_fields.html.erb
@@ -1,6 +1,6 @@
 <div>
-  <%= form_bulder.text_field :name, placeholder: 'Group\'s name ' , class: 'form-control', required: true, autocomplete: 'off' %>
+  <%= form_builder.text_field :name, placeholder: 'Group\'s name ' , class: 'form-control', required: true, autocomplete: 'off' %>
 </div>
 <div>
-  <%= form_bulder.text_area :description, placeholder: 'Add group\'s description' , class: 'form-control', autocomplete: 'off' %>
+  <%= form_builder.text_area :description, placeholder: 'Add group\'s description' , class: 'form-control', autocomplete: 'off' %>
 </div>
