--- a/app/views/messaging/groups/show.html.erb
+++ b/app/views/messaging/groups/show.html.erb
@@ -25,7 +25,7 @@
             </div>
             <div class="modal-body">
               <div class="d-grid gap-2">
-                <%= link_to "#", class: 'btn btn-outline-danger' do %>
+                <%= link_to messaging_groups_edit_path(@group.id), class: 'btn btn-outline-danger' do %>
                   <i class="fas fa-edit"></i> Edit group
                 <% end %>
                 <%= link_to messaging_group_invites_new_path(@group.id), remote: true, 'data-bs-dismiss': 'modal', class: 'btn btn-outline-success' do %>
