Rendering actions according to sender

--- a/app/javascript/stylesheets/messaging/messages-list-container.scss
+++ b/app/javascript/stylesheets/messaging/messages-list-container.scss
@@ -44,7 +44,7 @@
       }
 
       .message-content{
-        width: 25%;
+        width: fit-content;
         height: 30%;
         padding: 1em;
         border: 1px solid $slick-main-color;
