--- a/app/views/layouts/messaging.html.erb
+++ b/app/views/layouts/messaging.html.erb
@@ -3,7 +3,7 @@
   <head>  
     <title> <%= current_user.name %>  </title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-
+    <meta name="user_id" content="<%= current_user.id%>">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
