--- a/app/javascript/stylesheets/messaging/messages-list-container.scss
+++ b/app/javascript/stylesheets/messaging/messages-list-container.scss
@@ -34,9 +34,13 @@
       
       .message-content-actions{
         position: absolute;
-        top: 0;
+        top: -1em;
         right: 8em;
         display: none;
+        button {
+          margin: 0px 5px;
+        } 
+      
       }
 
       .message-content-actions.contact-message{
@@ -44,7 +48,7 @@
       }
 
       .message-content{
-        width: fit-content;
+        width: 50%;
         height: 30%;
         padding: 1em;
         border: 1px solid $slick-main-color;
