--- a/app/views/messaging/messages/_message.html.erb
+++ b/app/views/messaging/messages/_message.html.erb
@@ -1,6 +1,6 @@
 <section class="message-content-container <%= message.user.id == current_user.id ? 'user-message' : 'contact-message' %>">
   <section class="message-content-actions <%= message.user.id == current_user.id ? 'user-message' : 'contact-message' %>">
-    <%= button_tag class: 'btn btn-sm btn-primary' do%>
+    <%= button_tag class: 'btn btn-sm btn-primary btn-answer-message', value: message.message.id do %>
       <i class="fas fa-share"></i>
     <% end %>
     <%= render_user_exclusive_actions message %>
