--- a/app/views/messaging/messages/_message.html.erb
+++ b/app/views/messaging/messages/_message.html.erb
@@ -5,6 +5,11 @@
     <% end %>
     <%= render_user_exclusive_actions message %>
   </section>
+  <% if message.answer %>
+    <section class="message-answer-preview">
+      <p><%= message.answer.content %></p>
+    </section>
+  <% end%>
   <section class="message-content">
     <p> 
       <%= message.content %>
