--- a/app/javascript/stylesheets/messaging.scss
+++ b/app/javascript/stylesheets/messaging.scss
@@ -154,3 +154,9 @@
   width: 100%;
   background-color: $slick-dark-purple;
 }
+
+#form-edit-message #message_content{
+  width: 100%;
+  height: 100%; 
+  border-radius: 10em;
+}
