--- a/app/views/messaging/messages/_message_sender_exclusive_actions.html.erb
+++ b/app/views/messaging/messages/_message_sender_exclusive_actions.html.erb
@@ -1,6 +1,6 @@
-<%= button_tag class: 'btn btn-sm btn-success' do%>
+<%= link_to messaging_messages_edit_path(message.id), class: 'btn btn-sm btn-success', remote: true, method: :get do%>
   <i class="fas fa-edit"></i>
 <% end %>
-<%= button_tag class: 'btn btn-sm btn-danger' do %>
+<%= link_to messaging_messages_destroy_path(message.id), class: 'btn btn-sm btn-danger', remote: true, method: :delete do %>
   <i class="fas fa-times-circle"></i>
 <% end %>
