--- a/app/views/messaging/text_channel/destroy.js.erb
+++ b/app/views/messaging/text_channel/destroy.js.erb
@@ -1,2 +1,8 @@
-<h1>Messaging::TextChannel#destroy</h1>
-<p>Find me in app/views/messaging/text_channel/destroy.html.erb</p>
+<% list_text_channel = j render partial: 'messaging/text_channel/partials/list', locals: { group: group, current_user: current_user } , layouts: true %>
+(function (){
+  let list_text_channel = document.querySelector('.text-channel-list');
+  if(list_text_channel){
+    list_text_channel.innerHTML = '<%= list_text_channel %>'
+    list_text_channel.querySelector('.text-channel-button').click();
+  }
+}).call(this);
