--- a/app/javascript/stylesheets/messaging/messages-list-container.scss
+++ b/app/javascript/stylesheets/messaging/messages-list-container.scss
@@ -99,6 +99,13 @@
       }
     }
 
+    .message-content-container:hover.contact-message{
+      .message-content-actions{
+        flex-direction: row-reverse;
+        justify-content: left;
+      }
+    }
+
   }
 
   .answered-message{
