--- a/app/views/messaging/messages/_message.html.erb
+++ b/app/views/messaging/messages/_message.html.erb
@@ -5,7 +5,7 @@
     <% end %>
     <%# Rendering action that creates threads %>
     <% if message.class == TextChannelMessage%>
-      <%= link_to '#', class: 'btn btn-sm btn-secondary', remote: true do %>
+      <%= link_to messaging_text_threads_path(text_channel_message_id: message.id), class: 'btn btn-sm btn-secondary', remote: true, method: :post do %>
         >
       <% end %>
     <% end %>
@@ -20,6 +20,17 @@
     <p class="message-text"> 
       <%= message.content %>
     </p>
+    <%# Rendering action that creates threads %>
+    <% if message.class == TextChannelMessage && message.text_thread %>
+      <div id="text-thread-actions-<%= message.text_thread.id %>">
+        <%= link_to messaging_text_thread_path(message.text_thread.id), class: 'btn btn-xs btn-secondary', remote: true do %>
+          > <%= message.text_thread.label %>
+        <% end %>
+        <%= link_to messaging_text_thread_path(message.text_thread.id), class: 'btn btn-xs btn-secondary', remote: true, method: :delete do %>
+          <i class="fas fa-times-circle"></i>
+        <% end %>
+      </div>
+    <% end %>
   </section>
   <section class="user-data"> 
     <div class="user-image">
