--- a/app/views/messaging/text_channel/partials/_list.html.erb
+++ b/app/views/messaging/text_channel/partials/_list.html.erb
@@ -3,10 +3,10 @@
     <% group.text_channels.each do |text_channel|  %>
       <li>
         <% if @group.user_adm.id == @current_user.id%>
-          <%= link_to  messaging_text_channel_path(text_channel.id), class: 'btn btn-xs btn-outline-light', remote: true, method: :delete do %>
+          <%= link_to  messaging_text_channel_path(text_channel.id), class: 'btn btn-xs btn-outline-light text-channel-action', remote: true, method: :delete do %>
             <i class="fas fa-trash"></i>
           <% end %>
-          <%= link_to edit_messaging_text_channel_path(text_channel.id), class: 'btn btn-xs btn-outline-light', remote: true do %>
+          <%= link_to edit_messaging_text_channel_path(text_channel.id), class: 'btn btn-xs btn-outline-light text-channel-action', remote: true do %>
             <i class="fas fa-edit"></i>
           <% end %>
         <% end %>
