--- a/app/views/messaging/text_threads/show.js.erb
+++ b/app/views/messaging/text_threads/show.js.erb
@@ -7,6 +7,8 @@
 (function (){
   let group_menu_selection_content = document.querySelector('.group-menu-selection-content');
   if(group_menu_selection_content){
-    group_menu_selection_content.innerHTML = '<%= text_thread_messages %>'
+    group_menu_selection_content.innerHTML = '<%= text_thread_messages %>';    
+    consumer.text_thread?.unsubscribe();
+    consumer.text_thread = init_subscription_for_resource(consumer, 'text_thread', '<%= text_thread.id %>' );
   }
 }).call(this)
