--- a/app/javascript/stylesheets/groups.scss
+++ b/app/javascript/stylesheets/groups.scss
@@ -6,17 +6,25 @@
   height: 100vh;
   width: 100%;
   background-color: $slick-dark-purple;
+  overflow: hidden;
+  overflow-y: scroll;
 
   .group-option-list{ 
     width: 75%;
     margin: auto;
     margin-top: 3em;
-    display: flex;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: 15em 15em 15em;
+    justify-content: center;
+    gap: 2em
   }
 
   .group-data{
     width: 10em;
+    height: 10em;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 
     .group-image{
       font-size: 5em;
