--- a/app/views/messaging/groups/user_groups.html.erb
+++ b/app/views/messaging/groups/user_groups.html.erb
@@ -1,30 +1,34 @@
 <section class="groups-container">
   <section class="group-option-list">
     <% @user_groups.each do |group| %>
-      <%= link_to messaging_groups_show_path(group.id), class: 'btn btn-outline-light' do %>
+      <div>
+        <%= link_to messaging_groups_show_path(group.id), class: 'btn btn-outline-light' do %>
+          <div class="group-data">
+            <div class="group-image">
+              <% if group.group_image_url %>
+                <%= image_tag group.group_image_url, width: 50 %>
+              <% else %>
+                <i class="fas fa-image"></i>
+              <% end %>
+            </div>
+            <div class="group-name">
+              <%= group.name %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+    <div>
+      <%= link_to messaging_groups_new_path , class: 'btn btn-outline-light' do  %>
         <div class="group-data">
           <div class="group-image">
-            <% if group.group_image_url %>
-              <%= image_tag group.group_image_url, width: 50 %>
-            <% else %>
-              <i class="fas fa-image"></i>
-            <% end %>
+            <i class="fas fa-plus"></i>
           </div>
           <div class="group-name">
-            <%= group.name %>
+            Create new group
           </div>
         </div>
       <% end %>
-    <% end %>
-    <%= link_to messaging_groups_new_path , class: 'btn btn-outline-light' do  %>
-      <div class="group-data">
-        <div class="group-image">
-          <i class="fas fa-plus"></i>
-        </div>
-        <div class="group-name">
-          Create new group
-        </div>
-      </div>
-    <% end %>
+    </div>
   </section>
 </section>
