Deleting and joining groups

--- a/app/views/layouts/messaging_partials/_side_menu.html.erb
+++ b/app/views/layouts/messaging_partials/_side_menu.html.erb
@@ -23,13 +23,7 @@
       <% end %>
     </section>
     <section class="group-options">
-      <% @user.all_user_groups.each do |group| %>
-        <section class="messaging-group">
-          <%= link_to messaging_groups_show_path(group.id) do %> 
-            <i class="fas fa-users"> </i> <%= group.name %>
-          <% end %>
-        </section>
-      <% end %>
+      <%= render 'messaging/groups/partials/list_all_user_groups', all_user_groups: @user.all_user_groups%>
     </section>
     <section class="group-actions">
 
