--- a/app/views/messaging/groups/edit.html.erb
+++ b/app/views/messaging/groups/edit.html.erb
@@ -8,7 +8,7 @@
         <%= link_to messaging_groups_show_path(@group), class: 'btn btn-sm btn-outline-light' do %>
           <i class="fas fa-times-circle"></i> Cancel
         <% end %>
-        <%= link_to messaging_groups_delete_path(@group),  class: 'btn btn-sm btn-outline-light btn-delete-group' do%>
+        <%= link_to messaging_groups_delete_path(@group),  class: 'btn btn-sm btn-outline-light btn-delete-group', method: :delete do%>
           <i class="fas fa-trash"></i> Delete
         <% end %>
         <%= f.submit class: 'btn btn-sm btn-outline-light', commit: 'Update group' do %>
