--- a/app/views/messaging/user_invites/_list_received.html.erb
+++ b/app/views/messaging/user_invites/_list_received.html.erb
@@ -14,11 +14,11 @@
           <td> <%= invite.inviter.name %> </td>
           <td> <%= invite.inviter.email %> </td>
           <td> 
-            <%= link_to messaging_accept_invite_path(invite), remote: true, method: :put do %>
-              <i class="fas fa-check"></i>
+            <%= link_to messaging_accept_invite_path(invite), class: 'btn btn-sm btn-success', remote: true, method: :put do %>
+              <i class="fas fa-check-circle"></i>
             <% end %>
-            <%= link_to messaging_decline_invite_path(invite), remote: true, method: :delete do %>
-              <i class="fas fa-times"></i>
+            <%= link_to messaging_decline_invite_path(invite), class: 'btn btn-sm btn-danger', remote: true, method: :delete do %>
+              <i class="fas fa-times-circle"></i>
             <% end %>
           </td>
         </tr>
@@ -46,11 +46,11 @@
           <td><%= group_invite.group.name %></td>
           <td><%= group_invite.group.description %></td>
           <td> 
-            <%= link_to messaging_accept_group_invite_path(group_invite), remote: true, method: :put do %>
-              <i class="fas fa-check"></i>
+            <%= link_to messaging_accept_group_invite_path(group_invite), class: 'btn btn-sm btn-success', remote: true, method: :put do %>
+              <i class="fas fa-check-circle"></i>
             <% end %>
-            <%= link_to messaging_decline_group_invite_path(group_invite), remote: true, method: :delete do %>
-              <i class="fas fa-times"></i>
+            <%= link_to messaging_decline_group_invite_path(group_invite), class: 'btn btn-sm btn-danger', remote: true, method: :delete do %>
+              <i class="fas fa-times-circle"></i>
             <% end %>
           </td>
         </tr>
