--- a/app/views/messaging/friends/partials/_list.html.erb
+++ b/app/views/messaging/friends/partials/_list.html.erb
@@ -13,10 +13,10 @@
           <h4><%= friend.name %></h4>
         </div>
         <div class="friend-actions">
-          <%= link_to "#", class: 'btn btn-sm btn-outline-dark' do %>
+          <%= link_to "#", class: 'btn btn-sm btn-outline-light' do %>
             <i class="fas fa-comment"></i>
           <% end %>
-          <%= link_to "#", class: 'btn btn-sm btn-outline-dark' do %>
+          <%= link_to messaging_remove_friend_path(friend.id), class: 'btn btn-sm btn-outline-light', method: :delete, remote: true do %>
             <i class="fas fa-times-circle"></i>
           <% end %>
         </div>
