--- a/app/views/messaging/user_invites/_list_received.html.erb
+++ b/app/views/messaging/user_invites/_list_received.html.erb
@@ -1,62 +1,64 @@
-<h1>User invites</h1>
-<table class="table table-hover">
-  <thead class="table-primary">
-    <tr>
-      <th> Name </th>
-      <th> Email </th>
-      <th> Action </th>
-    </tr>
-  </thead>
-  <tbody>
-    <% if !received_invites.empty? %>
-      <% received_invites.each do |invite|%>
-        <tr>
-          <td> <%= invite.inviter.name %> </td>
-          <td> <%= invite.inviter.email %> </td>
-          <td> 
-            <%= link_to messaging_accept_invite_path(invite), class: 'btn btn-sm btn-success', remote: true, method: :put do %>
-              <i class="fas fa-check-circle"></i>
-            <% end %>
-            <%= link_to messaging_decline_invite_path(invite), class: 'btn btn-sm btn-danger', remote: true, method: :delete do %>
-              <i class="fas fa-times-circle"></i>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
-    <% else %>
+<section class="invite-tables-container">
+  <h1>User invites</h1>
+  <table class="table table-hover invites-table">
+    <thead class="table-primary">
       <tr>
-        <td colspan="3"> You haven't received invites </td>
+        <th> Name </th>
+        <th> Email </th>
+        <th> Action </th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-<h1>Group invites</h1>
-<table class="table table-hover">
-  <thead class="table-primary">
-    <tr>
-      <th> Group Name</th>
-      <th> Group description </th>
-      <th> Actions </th>
-    </tr>
-  </thead>
-  <tbody>  
-    <% if !group_invites.empty? %>
-      <% group_invites.each do |group_invite| %>
+    </thead>
+    <tbody>
+      <% if !received_invites.empty? %>
+        <% received_invites.each do |invite|%>
+          <tr>
+            <td> <%= invite.inviter.name %> </td>
+            <td> <%= invite.inviter.email %> </td>
+            <td> 
+              <%= link_to messaging_accept_invite_path(invite), class: 'btn btn-sm btn-success', remote: true, method: :put do %>
+                <i class="fas fa-check-circle"></i>
+              <% end %>
+              <%= link_to messaging_decline_invite_path(invite), class: 'btn btn-sm btn-danger', remote: true, method: :delete do %>
+                <i class="fas fa-times-circle"></i>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      <% else %>
         <tr>
-          <td><%= group_invite.group.name %></td>
-          <td><%= group_invite.group.description %></td>
-          <td> 
-            <%= link_to messaging_accept_group_invite_path(group_invite), class: 'btn btn-sm btn-success', remote: true, method: :put do %>
-              <i class="fas fa-check-circle"></i>
-            <% end %>
-            <%= link_to messaging_decline_group_invite_path(group_invite), class: 'btn btn-sm btn-danger', remote: true, method: :delete do %>
-              <i class="fas fa-times-circle"></i>
-            <% end %>
-          </td>
+          <td colspan="3"> You haven't received invites </td>
         </tr>
       <% end %>
-    <% else %>
-      <td colspan="3"> You haven't received invites </td>
-    <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+  <h1>Group invites</h1>
+  <table class="table table-hover invites-table">
+    <thead class="table-primary">
+      <tr>
+        <th> Group Name</th>
+        <th> Group description </th>
+        <th> Actions </th>
+      </tr>
+    </thead>
+    <tbody>  
+      <% if !group_invites.empty? %>
+        <% group_invites.each do |group_invite| %>
+          <tr>
+            <td><%= group_invite.group.name %></td>
+            <td><%= group_invite.group.description %></td>
+            <td> 
+              <%= link_to messaging_accept_group_invite_path(group_invite), class: 'btn btn-sm btn-success', remote: true, method: :put do %>
+                <i class="fas fa-check-circle"></i>
+              <% end %>
+              <%= link_to messaging_decline_group_invite_path(group_invite), class: 'btn btn-sm btn-danger', remote: true, method: :delete do %>
+                <i class="fas fa-times-circle"></i>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      <% else %>
+        <td colspan="3"> You haven't received invites </td>
+      <% end %>
+    </tbody>
+  </table>
+</section>
