--- a/app/views/layouts/messaging_partials/_side_menu.html.erb
+++ b/app/views/layouts/messaging_partials/_side_menu.html.erb
@@ -11,7 +11,7 @@
         <i class="fas fa-power-off" style="color: white;"></i>
       <% end %>
 
-      <%= link_to '#', title: 'Count configuration', 'data-toggle': 'tooltip'  do %>
+      <%= link_to messaging_users_edit_path, title: 'Count configuration', 'data-toggle': 'tooltip'  do %>
         <i class="fas fa-cog" style="color: white;"></i>
       <% end %>
     </div>
