Replacing user avatar

--- a/app/views/layouts/messaging_partials/_side_menu.html.erb
+++ b/app/views/layouts/messaging_partials/_side_menu.html.erb
@@ -2,6 +2,7 @@
   <section>
     <!-- User's data section -->
     <div id="user-avatar">
+      <i class="fas fa-user"></i>
     </div>
     <p class="user-name">
       <%= current_user.name %>
