--- a/app/javascript/stylesheets/messaging/side_menu.scss
+++ b/app/javascript/stylesheets/messaging/side_menu.scss
@@ -7,6 +7,17 @@
   margin: auto;
   margin-top: 2em; 
   margin-bottom: 2em;  
+  padding: 0;
+  text-align: center;
+  box-sizing: border-box;
+  i {
+    display: inline-block;
+    margin-top: 25%; 
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 40pt;
+  }
 }
 
 .group-options{ 
