--- a/app/views/presentation/main/index.html.erb
+++ b/app/views/presentation/main/index.html.erb
@@ -12,8 +12,11 @@
     <p class="float-breaker"></p>
 </header>
 <section>
-    <!-- the content goes here -->
+    <h1>Build <span class="teams">Teams.</span></h1>
+    <h1>Build <span class="communities">Communities.</span></h1>
+    <h1>Build <span class="partenrships">Partnerships.</span></h1>
+    <h1>Build <span class="connections">Connections.</span></h1>
 </section>
 <footer>
-    Ismael Cesar
+    &copy; Ismael Cesar
 </footer>
