Setting up layout and cable

--- a/app/javascript/stylesheets/messaging.scss
+++ b/app/javascript/stylesheets/messaging.scss
@@ -3,6 +3,7 @@
 @import 'bootstrap'; 
 @import 'messaging/side_menu.scss';
 @import 'messaging/messages-list-container.scss';
+@import 'groups';
 
 #side-menu { 
   width: 10%; 
